testsuite/bad/bad006.jl
int main() {
        x = 14;
	return 0 ;
}
